--- a/package.json
+++ b/package.json
@@ -2,25 +2,14 @@
   "name": "prod-control",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.25",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "tsx --watch ./server/index.ts config=./tsconfig.node.json",
+    "server.build": "tsc -p ./tsconfig.node.json",
+    "react": "react-scripts start",
+    "react.build": "react-scripts build",
+    "react.test": "react-scripts test",
+    "react.eject": "react-scripts eject",
+    "dist": "npm run react.build && npm run server.build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +28,32 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@fastify/cors": "^8.2.1",
+    "@fastify/static": "^6.10.1",
+    "@paralleldrive/cuid2": "^2.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.25",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "axios": "^1.3.6",
+    "fastify": "^4.16.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26",
+    "tsx": "^3.12.6"
   }
 }
