--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "tsx --watch ./server/index.ts config=./tsconfig.node.json",
+    "server": "tsx  ./server/index.ts config=./tsconfig.node.json",
     "server.build": "tsc -p ./tsconfig.node.json",
     "react": "react-scripts start",
     "react.build": "react-scripts build",
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18.2.1",
     "axios": "^1.3.6",
     "fastify": "^4.16.3",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
