--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "tsx  ./server/index.ts config=./tsconfig.node.json",
+    "server": "tsx watch ./server/index.ts config=./tsconfig.node.json",
     "server.build": "tsc -p ./tsconfig.node.json",
     "react": "react-scripts start",
     "react.build": "react-scripts build",
     "react.test": "react-scripts test",
     "react.eject": "react-scripts eject",
-    "dist": "npm run react.build && npm run server.build"
+    "dist": "npm run react.build && npm run server.build",
+    "prod": "node build/index"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -32,7 +36,9 @@
   "dependencies": {
     "@fastify/cors": "^8.2.1",
     "@fastify/static": "^6.10.1",
+    "@fastify/view": "^7.4.1",
     "@paralleldrive/cuid2": "^2.2.0",
+    "@prisma/client": "^4.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -41,6 +47,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.3.6",
+    "ejs": "^3.1.9",
     "fastify": "^4.16.3",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -54,7 +61,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
     "@types/styled-components": "^5.1.26",
+    "prisma": "^4.13.0",
     "tsx": "^3.12.6"
   }
 }
