--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "rootDir": "./server",
+    "rootDir": ".",
     "outDir": "./build",
     "baseUrl": ".",
     "allowJs": true,
